--- a/dre-tictactoe/src/index.css
+++ b/dre-tictactoe/src/index.css
@@ -2,6 +2,10 @@ body {
     font: 14px "Century Gothic", Futura, sans-serif;
     margin: 20px;
   }
+
+  .selected {
+      font-weight: bold;
+  }
   
   ol, ul {
     padding-left: 30px;
